[workspace]
members = [
    "d01-calorie-counting",
    "d02-rock-paper-scissors",
    "d03-rucksack",
    "d04-camp-cleanup",
    "d05-supply-stacks",
    "d06-tuning-trouble",
    "d07-no-space-on-device",
    "d08-tree-house",
    "d09-rope-bridge",
    "d10-cathode-ray-tube",
    "d11-monkey-in-the-middle",
    "d12-hill-climbing",
    "d13-distress-signal",
    "d14-reservoir",
    "d15-beacon-exclusion-zone",
    "d16-valves",
]
